--- a/samples/CameraAccess/server/public/index.html
+++ b/samples/CameraAccess/server/public/index.html
@@ -11,11 +11,12 @@
       height: 100vh; overflow: hidden;
     }
     #video-container {
-      width: 100%; height: 100vh; display: flex; align-items: center; justify-content: center;
-      position: relative; background: #111;
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      display: flex; align-items: center; justify-content: center;
+      background: #111; touch-action: none;
     }
     video {
-      height: 100%; max-width: 100%; object-fit: contain;
+      width: 100%; height: 100%; object-fit: contain;
     }
     #controls {
       position: absolute; top: 16px; right: 16px;
